--- a/no2.html
+++ b/no2.html
@@ -71,7 +71,7 @@
     </div>
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
-    <h1>宝贝，求你原谅我！😭</h1>
+    <h1>求你原谅我！😭</h1>
     <p>我没有恶意，只是开个玩笑，但我知道这样做伤害了你。请不要生气，给我一次机会吧。</p>
 
     <div class="btn">
