--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     
-    <h1>亲爱的，你会原谅我吗？🥹</h1>
+    <h1> 你会原谅我吗？🥹</h1>
     <p>这只是一个恶作剧，我真的没有意识到会伤害你。我真的很抱歉，让你感到伤心。</p>
 
     <div class="btn">
